--- a/collectionVideos.html
+++ b/collectionVideos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
-    <title>Glue Down</title>
+    <title>Collection videos</title>
 </head>
 <body>
     <header class="header-secundario">
@@ -27,36 +27,22 @@
             </div>
 
             <div class="contenedor-principal padding-corto">
-                <h1 class="short-line-height">Glue Down</h1>
-                <h2>Collections</h2>
-                <p class="light">Our Glue Down LVT collections are designed for high-performance environments that demand<br>long-term stability. Installed with adhesive for a secure, permanent bond, these floors offer<br>enhanced resistance in commercial spaces or high-traffic areas</p>
+                <h1 class="short-line-height">Collection videos</h1>
+                <p class="light">find inspiration for your space</p><br>
             </div>    
 
         </header>
         
-        <main>
-            <div>
-                <img src="/public/imagen_glue_down.png" alt="imagen glue down">
-            </div>
-
-            <div class="contenedor-3columnas">
-                <div class="contenedor-image">
-                    <img src="/public/lotus.png" alt="imagen lotus">
-                    <div class="texto-image-vertical">
-                        <h1 class="no-margin">Lotus</h1>
-                        <button class="btn-flecha">View collection <img src="/public/flecha.png" alt="flecha"></button>
-                    </div>
+        <main class="main-center">
+            <div class="video-block">
+                <div class="video-principal">
+                    <img src="/public/video.png" alt="video">
+                    <img src="/public/flecha-derecha.png" alt="flecha derecha"> 
                 </div>
-
-                <div class="contenedor-image">
-                    <img src="/public/powell.png" alt="imagen lotus">
-                    <div class="texto-image-vertical">
-                        <h1 class="no-margin">Powell</h1>
-                            <button class="btn-flecha">View collection <img src="/public/flecha.png" alt="flecha"></button>
-                    </div>
+                <div class="video-shadow-row">
+                    <img src="/public/video-shadow.png" alt="imagen video sombra">
+                    <img src="/public/video-shadow.png" alt="imagen video sombra">
                 </div>
-                </div>
-            </div>
             </div>
         </main>
 
