--- a/roomScenes.html
+++ b/roomScenes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
-    <title>Glue Down</title>
+    <title>Room scenes</title>
 </head>
 <body>
     <header class="header-secundario">
@@ -27,37 +27,23 @@
             </div>
 
             <div class="contenedor-principal padding-corto">
-                <h1 class="short-line-height">Glue Down</h1>
-                <h2>Collections</h2>
-                <p class="light">Our Glue Down LVT collections are designed for high-performance environments that demand<br>long-term stability. Installed with adhesive for a secure, permanent bond, these floors offer<br>enhanced resistance in commercial spaces or high-traffic areas</p>
+                <h1 class="short-line-height">Room scenes</h1>
+                <p class="light">find inspiration for your space</p><br>
+
+                <div class="point-menu">
+                    <p class="bold">Lotus<br><span>•</span></p>
+                    <p>Lotus +</p>
+                    <p>Powell</p>
+                    <p>Fume</p>
+                    <p>Iris</p>
+                    <p>Apres</p>
+                </div>
             </div>    
 
         </header>
         
         <main>
-            <div>
-                <img src="/public/imagen_glue_down.png" alt="imagen glue down">
-            </div>
-
-            <div class="contenedor-3columnas">
-                <div class="contenedor-image">
-                    <img src="/public/lotus.png" alt="imagen lotus">
-                    <div class="texto-image-vertical">
-                        <h1 class="no-margin">Lotus</h1>
-                        <button class="btn-flecha">View collection <img src="/public/flecha.png" alt="flecha"></button>
-                    </div>
-                </div>
-
-                <div class="contenedor-image">
-                    <img src="/public/powell.png" alt="imagen lotus">
-                    <div class="texto-image-vertical">
-                        <h1 class="no-margin">Powell</h1>
-                            <button class="btn-flecha">View collection <img src="/public/flecha.png" alt="flecha"></button>
-                    </div>
-                </div>
-                </div>
-            </div>
-            </div>
+            <img src="/public/roomScenes.png" alt="image room scenes">
         </main>
 
         <footer>
