--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <p>Collections</p>
                             </div>
                             <div>
-                                <button>View collection <img src="/public/flecha.png" alt="flecha"></button>
+                                    <button class="btn-flecha">View collection <img src="/public/flecha.png" alt="flecha"></button>
                             </div>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                                 <p>Collections</p>
                             </div>
                             <div>
-                                <button>View collection <img src="/public/flecha.png" alt="flecha"></button>
+                                    <button class="btn-flecha">View collection <img src="/public/flecha.png" alt="flecha"></button>
                             </div>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                 <img src="/public/image_3.png" alt="Imagen3" class="background-image">
                 <div class="contenido-image">
                     <h1>Visualize Evolux in your space</h1>
-                    <button>Try it now <img src="/public/flecha.png" alt="flecha"></button>
+                        <button class="btn-flecha">Try it now <img src="/public/flecha.png" alt="flecha"></button>
                 </div>
             </div>
 
@@ -100,7 +100,7 @@
                 <div>
                     <h2>¿Need inspiration for <br>your space?</h2>
                     <h1>Discover our featured <br>products</h1>
-                    <button>More inspiration <img src="/public/flecha.png" alt="flecha"></button>
+                        <button class="btn-flecha">More inspiration <img src="/public/flecha.png" alt="flecha"></button>
                 </div>
                 <div class="flecha-imagen">
                     <img src="/public/fechaBack.png" alt="flecha back">
@@ -109,7 +109,7 @@
             </div>
             <div class="contenedor-apres">
                 <p>Apres series</p>
-                <a href="#" class="enlace-negro">Caramel</a>
+                <a href="#" class="link-flecha">Caramel <img src="/public/flecha.png" alt="flecha"></a>
             </div>
 
             <div class="contenedor-iphone">
@@ -120,7 +120,7 @@
                 </div>
                 <div>
                     <h1>All Evolux products in one place</h1>
-                    <a href="#" class="enlace-negro">Download the catalog</a>
+                    <a href="#" class="link-flecha">Download the catalog <img src="/public/flecha.png" alt="flecha"></a>
                 </div>
             </div>
 
