--- a/builtForEveryday.html
+++ b/builtForEveryday.html
@@ -16,12 +16,12 @@
 
                     <nav class="navegacion a-negro">
                         <a>Evolux Collections</a>
-                        <a>Engineered Wood - Special Order</a>
-                        <a>Feature & benefits</a>
-                        <a>Check Stock</a>
-                        <a>Installation & Care</a>
-                        <a>Room scenes</a>
-                        <a>Collection videos</a>
+                        <a href="engineered.html">Engineered Wood - Special Order</a>
+                        <a href="builtForEveryday.html">Feature & benefits</a>
+                        <a href="checkStock.html">Check Stock</a>
+                        <a href="installation.html">Installation & Care</a>
+                        <a href="roomScenes.html">Room scenes</a>
+                        <a href="collectionVideos.html">Collection videos</a>
                     </nav>
                 </div>
             </div>
@@ -164,9 +164,9 @@
             </div>
             
             <div class="footer-principal">
-                <a href="">Terms and conditions</a>
+                <a href="termsandconditions.html">Terms and conditions</a>
                 <a href="">Warranty</a>
-                <a href="">About us</a>
+                <a href="aboutUs.html">About us</a>
                 <a href="">Contact us</a>
             </div>
             
