--- a/iris.html
+++ b/iris.html
@@ -16,12 +16,12 @@
 
                     <nav class="navegacion a-negro">
                         <a>Evolux Collections</a>
-                        <a>Engineered Wood - Special Order</a>
-                        <a>Feature & benefits</a>
-                        <a>Check Stock</a>
-                        <a>Installation & Care</a>
-                        <a>Room scenes</a>
-                        <a>Collection videos</a>
+                        <a href="engineered.html">Engineered Wood - Special Order</a>
+                        <a href="builtForEveryday.html">Feature & benefits</a>
+                        <a href="checkStock.html">Check Stock</a>
+                        <a href="installation.html">Installation & Care</a>
+                        <a href="roomScenes.html">Room scenes</a>
+                        <a href="collectionVideos.html">Collection videos</a>
                     </nav>
                 </div>
             </div>
@@ -43,28 +43,28 @@
                     <img src="/public/smoke_iris.png" alt="imagen smoke">
                     <div class="contenedor-lotus">
                         <p>Iris series</p>
-                        <a href="#" class="enlace-negro">Smoke</a>
+                        <a href="#" class="link-flecha">Smoke <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/oil_iris.png" alt="imagen oil">
                     <div class="contenedor-lotus">
                         <p>Iris series</p>
-                        <a href="#" class="enlace-negro">Oil</a>
+                        <a href="#" class="link-flecha">Oil <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/bleached_iris.png" alt="imagen bleached">
                     <div class="contenedor-lotus">
                         <p>Iris series</p>
-                        <a href="#" class="enlace-negro">Bleached</a>
+                        <a href="#" class="link-flecha">Bleached <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/maple_iris.png" alt="imagen maple">
                     <div class="contenedor-lotus">
                         <p>Iris series</p>
-                        <a href="#" class="enlace-negro">Maple</a>
+                        <a href="#" class="link-flecha">Maple <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
 
@@ -72,28 +72,28 @@
                     <img src="/public/off-white_iris.png" alt="imagen off-white">
                     <div class="contenedor-lotus">
                         <p>Iris series</p>
-                        <a href="#" class="enlace-negro">Off White</a>
+                        <a href="#" class="link-flecha">Off White <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/oak_iris.png" alt="imagen oak">
                     <div class="contenedor-lotus">
                         <p>Iris series</p>
-                        <a href="#" class="enlace-negro">Oak</a>
+                        <a href="#" class="link-flecha">Oak <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/blonde_iris.png" alt="imagen blonde">
                     <div class="contenedor-lotus">
                         <p>Iris series</p>
-                        <a href="#" class="enlace-negro">Blonde</a>
+                        <a href="#" class="link-flecha">Blonde <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/almond_iris.png" alt="imagen almond">
                     <div class="contenedor-lotus">
                         <p>Iris series</p>
-                        <a href="#" class="enlace-negro">Almond</a>
+                        <a href="#" class="link-flecha">Almond <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
 
@@ -101,28 +101,28 @@
                     <img src="/public/walnut_iris.png" alt="imagen walnut">
                     <div class="contenedor-lotus">
                         <p>Iris series</p>
-                        <a href="#" class="enlace-negro">Walnut</a>
+                        <a href="#" class="link-flecha">Walnut <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/caramel-coast_iris.png" alt="imagen caramel-coast">
                     <div class="contenedor-lotus">
                         <p>Iris series</p>
-                        <a href="#" class="enlace-negro">Caramel coast</a>
+                        <a href="#" class="link-flecha">Caramel coast <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/sand-bar_iris.png" alt="imagen sand-bar">
                     <div class="contenedor-lotus">
                         <p>Iris series</p>
-                        <a href="#" class="enlace-negro">Sand Bar</a>
+                        <a href="#" class="link-flecha">Sand Bar <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/pacific-dune_iris.png" alt="imagen pacific-dune">
                     <div class="contenedor-lotus">
                         <p>Iris series</p>
-                        <a href="#" class="enlace-negro">Pacific Dune</a>
+                        <a href="#" class="link-flecha">Pacific Dune <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
 
@@ -130,21 +130,21 @@
                     <img src="/public/palm-coast_iris.png" alt="imagen palm-coast">
                     <div class="contenedor-lotus">
                         <p>Iris series</p>
-                        <a href="#" class="enlace-negro">Palm Coast</a>
+                        <a href="#" class="link-flecha">Palm Coast <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/harvest_iris.png" alt="imagen harvest">
                     <div class="contenedor-lotus">
                         <p>Iris series</p>
-                        <a href="#" class="enlace-negro">Harvest</a>
+                        <a href="#" class="link-flecha">Harvest <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/hill-country_iris.png" alt="imagen hill-country">
                     <div class="contenedor-lotus">
                         <p>Iris series</p>
-                        <a href="#" class="enlace-negro">Hill Country</a>
+                        <a href="#" class="link-flecha">Hill Country <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
             </div>
@@ -235,9 +235,9 @@
             </div>
             
             <div class="footer-principal">
-                <a href="">Terms and conditions</a>
+                <a href="termsandconditions.html">Terms and conditions</a>
                 <a href="">Warranty</a>
-                <a href="">About us</a>
+                <a href="aboutUs.html">About us</a>
                 <a href="">Contact us</a>
             </div>
             
