--- a/lotus.html
+++ b/lotus.html
@@ -16,12 +16,12 @@
 
                     <nav class="navegacion a-negro">
                         <a>Evolux Collections</a>
-                        <a>Engineered Wood - Special Order</a>
-                        <a>Feature & benefits</a>
-                        <a>Check Stock</a>
-                        <a>Installation & Care</a>
-                        <a>Room scenes</a>
-                        <a>Collection videos</a>
+                        <a href="engineered.html">Engineered Wood - Special Order</a>
+                        <a href="builtForEveryday.html">Feature & benefits</a>
+                        <a href="checkStock.html">Check Stock</a>
+                        <a href="installation.html">Installation & Care</a>
+                        <a href="roomScenes.html">Room scenes</a>
+                        <a href="collectionVideos.html">Collection videos</a>
                     </nav>
                 </div>
             </div>
@@ -44,28 +44,28 @@
                     <img src="/public/blonde.png" alt="imagen blonde">
                     <div class="contenedor-lotus">
                         <p>Lotus series</p>
-                        <a href="#" class="enlace-negro">Blonde</a>
+                        <a href="#" class="link-flecha">Blonde <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/cocoa.png" alt="imagen cocoa">
                     <div class="contenedor-lotus">
                         <p>Lotus series</p>
-                        <a href="#" class="enlace-negro">Cocoa</a>
+                        <a href="#" class="link-flecha">Cocoa <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/taupe.png" alt="imagen taupe">
                     <div class="contenedor-lotus">
                         <p>Lotus series</p>
-                        <a href="#" class="enlace-negro">Taupe</a>
+                        <a href="#" class="link-flecha">Taupe <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/Maple.png" alt="imagen maple">
                     <div class="contenedor-lotus">
                         <p>Lotus series</p>
-                        <a href="#" class="enlace-negro">Maple</a>
+                        <a href="#" class="link-flecha">Maple <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
 
@@ -73,14 +73,14 @@
                     <img src="/public/snow.png" alt="imagen snow">
                     <div class="contenedor-lotus">
                         <p>Lotus series</p>
-                        <a href="#" class="enlace-negro">Snow</a>
+                        <a href="#" class="link-flecha">Snow <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/ash.png" alt="imagen ash">
                     <div class="contenedor-lotus">
                         <p>Lotus series</p>
-                        <a href="#" class="enlace-negro">Ash</a>
+                        <a href="#" class="link-flecha">Ash <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
             </div>
@@ -130,9 +130,9 @@
             </div>
             
             <div class="footer-principal">
-                <a href="">Terms and conditions</a>
+                <a href="termsandconditions.html">Terms and conditions</a>
                 <a href="">Warranty</a>
-                <a href="">About us</a>
+                <a href="aboutUs.html">About us</a>
                 <a href="">Contact us</a>
             </div>
             
