--- a/apres.html
+++ b/apres.html
@@ -16,12 +16,12 @@
 
                     <nav class="navegacion a-negro">
                         <a>Evolux Collections</a>
-                        <a>Engineered Wood - Special Order</a>
-                        <a>Feature & benefits</a>
-                        <a>Check Stock</a>
-                        <a>Installation & Care</a>
-                        <a>Room scenes</a>
-                        <a>Collection videos</a>
+                        <a href="engineered.html">Engineered Wood - Special Order</a>
+                        <a href="builtForEveryday.html">Feature & benefits</a>
+                        <a href="checkStock.html">Check Stock</a>
+                        <a href="installation.html">Installation & Care</a>
+                        <a href="roomScenes.html">Room scenes</a>
+                        <a href="collectionVideos.html">Collection videos</a>
                     </nav>
                 </div>
             </div>
@@ -44,28 +44,28 @@
                     <img src="/public/irish-apres.png" alt="imagen irish">
                     <div class="contenedor-lotus">
                         <p>Apres series</p>
-                        <a href="#" class="enlace-negro">Irish</a>
+                        <a href="#" class="link-flecha">Irish <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/latte-apres.png" alt="imagen latte">
                     <div class="contenedor-lotus">
                         <p>Apres series</p>
-                        <a href="#" class="enlace-negro">Latte</a>
+                        <a href="#" class="link-flecha">Latte <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/macchiato-apres.png" alt="imagen macchiato">
                     <div class="contenedor-lotus">
                         <p>Apres series</p>
-                        <a href="#" class="enlace-negro">Macchiato</a>
+                        <a href="#" class="link-flecha">Macchiato <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/caramel-apres.png" alt="imagen caramel">
                     <div class="contenedor-lotus">
                         <p>Apres series</p>
-                        <a href="#" class="enlace-negro">Caramel</a>
+                        <a href="#" class="link-flecha">Caramel <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
 
@@ -73,28 +73,28 @@
                     <img src="/public/panna-apres.png" alt="imagen panna">
                     <div class="contenedor-lotus">
                         <p>Apres series</p>
-                        <a href="#" class="enlace-negro">Panna</a>
+                        <a href="#" class="link-flecha">Panna <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/galao-apres.png" alt="imagen galao">
                     <div class="contenedor-lotus">
                         <p>Apres series</p>
-                        <a href="#" class="enlace-negro">Galao</a>
+                        <a href="#" class="link-flecha">Galao <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/mocha-apres.png" alt="imagen mocha">
                     <div class="contenedor-lotus">
                         <p>Apres series</p>
-                        <a href="#" class="enlace-negro">Mocha</a>
+                        <a href="#" class="link-flecha">Mocha <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/espresso-apres.png" alt="imagen espresso">
                     <div class="contenedor-lotus">
                         <p>Apres series</p>
-                        <a href="#" class="enlace-negro">Espresso</a>
+                        <a href="#" class="link-flecha">Espresso <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
             </div>
@@ -185,9 +185,9 @@
             </div>
             
             <div class="footer-principal">
-                <a href="">Terms and conditions</a>
+                <a href="termsandconditions.html">Terms and conditions</a>
                 <a href="">Warranty</a>
-                <a href="">About us</a>
+                <a href="aboutUs.html">About us</a>
                 <a href="">Contact us</a>
             </div>
             
