--- a/fume.html
+++ b/fume.html
@@ -16,12 +16,12 @@
 
                     <nav class="navegacion a-negro">
                         <a>Evolux Collections</a>
-                        <a>Engineered Wood - Special Order</a>
-                        <a>Feature & benefits</a>
-                        <a>Check Stock</a>
-                        <a>Installation & Care</a>
-                        <a>Room scenes</a>
-                        <a>Collection videos</a>
+                        <a href="engineered.html">Engineered Wood - Special Order</a>
+                        <a href="builtForEveryday.html">Feature & benefits</a>
+                        <a href="checkStock.html">Check Stock</a>
+                        <a href="installation.html">Installation & Care</a>
+                        <a href="roomScenes.html">Room scenes</a>
+                        <a href="collectionVideos.html">Collection videos</a>
                     </nav>
                 </div>
             </div>
@@ -44,28 +44,28 @@
                     <img src="/public/tobacco.png" alt="imagen tobacco">
                     <div class="contenedor-lotus">
                         <p>Fume series</p>
-                        <a href="#" class="enlace-negro">Tobacco</a>
+                        <a href="#" class="link-flecha">Tobacco <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/canela.png" alt="imagen canela">
                     <div class="contenedor-lotus">
                         <p>Fume series</p>
-                        <a href="#" class="enlace-negro">Canela</a>
+                        <a href="#" class="link-flecha">Canela <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/honey.png" alt="imagen honey">
                     <div class="contenedor-lotus">
                         <p>Fume series</p>
-                        <a href="#" class="enlace-negro">Honey</a>
+                        <a href="#" class="link-flecha">Honey <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/cotton.png" alt="imagen cotton">
                     <div class="contenedor-lotus">
                         <p>Fume series</p>
-                        <a href="#" class="enlace-negro">Cotton</a>
+                        <a href="#" class="link-flecha">Cotton <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
 
@@ -73,14 +73,14 @@
                     <img src="/public/silk.png" alt="imagen silk">
                     <div class="contenedor-lotus">
                         <p>Fume series</p>
-                        <a href="#" class="enlace-negro">Silk</a>
+                        <a href="#" class="link-flecha">Silk <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/maple_fume.png" alt="imagen maple_fume">
                     <div class="contenedor-lotus">
                         <p>Fume series</p>
-                        <a href="#" class="enlace-negro">Maple</a>
+                        <a href="#" class="link-flecha">Maple <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
             </div>
@@ -171,9 +171,9 @@
             </div>
             
             <div class="footer-principal">
-                <a href="">Terms and conditions</a>
+                <a href="termsandconditions.html">Terms and conditions</a>
                 <a href="">Warranty</a>
-                <a href="">About us</a>
+                <a href="aboutUs.html">About us</a>
                 <a href="">Contact us</a>
             </div>
             
