--- a/powell.html
+++ b/powell.html
@@ -16,12 +16,12 @@
 
                     <nav class="navegacion a-negro">
                         <a>Evolux Collections</a>
-                        <a>Engineered Wood - Special Order</a>
-                        <a>Feature & benefits</a>
-                        <a>Check Stock</a>
-                        <a>Installation & Care</a>
-                        <a>Room scenes</a>
-                        <a>Collection videos</a>
+                        <a href="engineered.html">Engineered Wood - Special Order</a>
+                        <a href="builtForEveryday.html">Feature & benefits</a>
+                        <a href="checkStock.html">Check Stock</a>
+                        <a href="installation.html">Installation & Care</a>
+                        <a href="roomScenes.html">Room scenes</a>
+                        <a href="collectionVideos.html">Collection videos</a>
                     </nav>
                 </div>
             </div>
@@ -43,28 +43,28 @@
                     <img src="/public/ridge.png" alt="imagen ridge">
                     <div class="contenedor-lotus">
                         <p>Powell series</p>
-                        <a href="#" class="enlace-negro">Ridge</a>
+                        <a href="#" class="link-flecha">Ridge <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/oregon.png" alt="imagen oregon">
                     <div class="contenedor-lotus">
                         <p>Powell series</p>
-                        <a href="#" class="enlace-negro">Oregon</a>
+                        <a href="#" class="link-flecha">Oregon <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/driftwood.png" alt="imagen driftwood">
                     <div class="contenedor-lotus">
                         <p>Powell series</p>
-                        <a href="#" class="enlace-negro">Driftwood</a>
+                        <a href="#" class="link-flecha">Driftwood <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/silver.png" alt="imagen silver">
                     <div class="contenedor-lotus">
                         <p>Powell series</p>
-                        <a href="#" class="enlace-negro">Silver</a>
+                        <a href="#" class="link-flecha">Silver <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
 
@@ -72,14 +72,14 @@
                     <img src="/public/wealth.png" alt="imagen wealth">
                     <div class="contenedor-lotus">
                         <p>Powell series</p>
-                        <a href="#" class="enlace-negro">Wealth</a>
+                        <a href="#" class="link-flecha">Wealth <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="contenedor-image">
                     <img src="/public/oak.png" alt="imagen oak">
                     <div class="contenedor-lotus">
                         <p>Powell series</p>
-                        <a href="#" class="enlace-negro">Oak</a>
+                        <a href="#" class="link-flecha">Oak <img src="/public/flecha.png" alt="flecha"></a>
                     </div>
                 </div>
             </div>
@@ -129,9 +129,9 @@
             </div>
             
             <div class="footer-principal">
-                <a href="">Terms and conditions</a>
+                <a href="termsandconditions.html">Terms and conditions</a>
                 <a href="">Warranty</a>
-                <a href="">About us</a>
+                <a href="aboutUs.html">About us</a>
                 <a href="">Contact us</a>
             </div>
             
