--- a/index.html
+++ b/index.html
@@ -90,9 +90,13 @@
 
             <div class="contenedor imagen centrar-texto">
                 <img src="/public/image_3.png" alt="Imagen3" class="background-image">
-                <div class="contenido-image">
-                    <h1>Visualize Evolux in your space</h1>
-                        <button class="btn-flecha">Try it now <img src="/public/flecha.png" alt="flecha"></button>
+                <div class="contenido-cuadro">
+                    <img src="/public/cuadro_esquinas.png" alt="esquinas de un cuadrado" style="width: 100%;">
+                    <div class="contenido-image">
+                        <h1>Visualize Evolux in your space</h1>
+                        <button class="btn-flecha">Try it now <img src="/public/flecha.png" alt="flecha" style="margin: 0;"></button>
+                    </div>
+                    <img src="/public/semicirculo.png" alt="semicirculo" style="position: absolute; top: 80%; left: 17%;">
                 </div>
             </div>
 
