cambios en button

--- a/engineered.html
+++ b/engineered.html
@@ -43,7 +43,7 @@
                     <img src="/public/brazilian.png" alt="imagen lotus">
                     <div class="texto-image-vertical">
                         <h1 class="no-margin">Brazilian<br>Exotics</h1>
-                        <button class="btn-flecha">View collection <img src="/public/flecha.png" alt="flecha"></button>
+                        <button class="btn-flecha" onclick="window.location.href='brazilian.html'">View collection <img src="/public/flecha.png" alt="flecha"></button>
                     </div>
                 </div>
 
@@ -51,7 +51,7 @@
                     <img src="/public/european.png" alt="imagen lotus">
                     <div class="texto-image-vertical">
                         <h1 class="no-margin">European<br>Oak</h1>
-                        <button class="btn-flecha">View collection <img src="/public/flecha.png" alt="flecha"></button>
+                        <button class="btn-flecha" onclick="window.location.href='european.html'">View collection <img src="/public/flecha.png" alt="flecha"></button>
                     </div>
                 </div>
             </div>
