--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <p>Collections</p>
                             </div>
                             <div>
-                                    <button class="btn-flecha">View collection <img src="/public/flecha.png" alt="flecha"></button>
+                                    <button class="btn-flecha" onclick="window.location.href='glueDown.html'">View collection <img src="/public/flecha.png" alt="flecha"></button>
                             </div>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                                 <p>Collections</p>
                             </div>
                             <div>
-                                    <button class="btn-flecha">View collection <img src="/public/flecha.png" alt="flecha"></button>
+                                    <button class="btn-flecha" onclick="window.location.href='spc.html'">View collection <img src="/public/flecha.png" alt="flecha"></button>
                             </div>
                         </div>
                     </div>
