--- a/apres.html
+++ b/apres.html
@@ -99,7 +99,7 @@
                 </div>
             </div>
 
-            <section class="contendor-trim contenedor">
+            <section class="contendor-trim contenedor" style="margin: 8rem;">
                 <h1>Trim</h1>
                 <div>
                     <table class="table">
