--- a/glueDown.html
+++ b/glueDown.html
@@ -44,7 +44,7 @@
                     <img src="/public/lotus.png" alt="imagen lotus">
                     <div class="texto-image-vertical">
                         <h1 class="no-margin">Lotus</h1>
-                        <button class="btn-flecha">View collection <img src="/public/flecha.png" alt="flecha"></button>
+                        <button class="btn-flecha" onclick="window.location.href='lotus.html'">View collection <img src="/public/flecha.png" alt="flecha"></button>
                     </div>
                 </div>
 
@@ -52,7 +52,7 @@
                     <img src="/public/powell.png" alt="imagen lotus">
                     <div class="texto-image-vertical">
                         <h1 class="no-margin">Powell</h1>
-                            <button class="btn-flecha">View collection <img src="/public/flecha.png" alt="flecha"></button>
+                            <button class="btn-flecha"  onclick="window.location.href='powell.html'">View collection <img src="/public/flecha.png" alt="flecha"></button>
                     </div>
                 </div>
                 </div>
