--- a/spc.html
+++ b/spc.html
@@ -44,7 +44,7 @@
                     <img src="/public/fume.png" alt="imagen lotus">
                     <div class="texto-image-vertical">
                         <h1 class="no-margin">Fume</h1>
-                        <button class="btn-flecha">View collection <img src="/public/flecha.png" alt="flecha"></button>
+                        <button class="btn-flecha" onclick="window.location.href='fume2.html'">View collection <img src="/public/flecha.png" alt="flecha"></button>
                     </div>
                 </div>
 
@@ -52,7 +52,7 @@
                     <img src="/public/iris.png" alt="imagen lotus">
                     <div class="texto-image-vertical">
                         <h1 class="no-margin">Iris</h1>
-                        <button class="btn-flecha">View collection <img src="/public/flecha.png" alt="flecha"></button>
+                        <button class="btn-flecha" onclick="window.location.href='iris.html'">View collection <img src="/public/flecha.png" alt="flecha"></button>
                     </div>
                 </div>
 
@@ -60,7 +60,7 @@
                     <img src="/public/apres.png" alt="imagen lotus">
                     <div class="texto-image-vertical">
                         <h1 class="no-margin">Apres</h1>
-                        <button class="btn-flecha">View collection <img src="/public/flecha.png" alt="flecha"></button>
+                        <button class="btn-flecha" onclick="window.location.href='apres.html'">View collection <img src="/public/flecha.png" alt="flecha"></button>
                     </div>
                 </div>
             </div>
