--- a/fume2.html
+++ b/fume2.html
@@ -89,7 +89,7 @@
                 <h1>Trim</h1>
                 <div>
                     <table class="table">
-                        <tr>
+                        <tr style="border-bottom: 1px solid #9A9A9A;">
                             <td>
                                 <img src="/public/trim1.png" alt="trim 1">
                             </td>
@@ -97,12 +97,12 @@
                                 T-Mold  94" X 1 3/4" X 5/16"
                             </td>
                             <td>
-                                <img src="/public/flecha_up.png" alt="flecha arriba">
+                                    <img src="/public/flecha_down.png" alt="flecha arriba" id="toggleTableBtn" style="cursor:pointer;">
                             </td>
                         </tr>
                     </table>
                     <!-- Nueva tabla debajo de la primer fila -->
-                    <table class="table-noborder">
+                    <table class="table-noborder" id="tableTrimDetails" style="display:none;">
                         <thead>
                             <tr>
                                 <th>Description</th>
@@ -170,6 +170,7 @@
                     </table>
                 </div>
             </section>
+            <script src="toggleTrimTable.js"></script>
 
             <section class="contenedor-3columnas lotus">
                 <div>
