--- a/fume3.html
+++ b/fume3.html
@@ -120,11 +120,11 @@
                 </div>
             </section>
 
-            <section class="contendor-trim contenedor">
+            <section class="contendor-trim" style="margin: 8rem;">
                 <h1>Trim</h1>
                 <div>
                     <table class="table">
-                        <tr>
+                        <tr style="border-bottom: 1px solid #9A9A9A;">
                             <td>
                                 <img src="/public/trim1.png" alt="trim 1">
                             </td>
@@ -132,9 +132,54 @@
                                 T-Mold  94" X 1 3/4" X 5/16"
                             </td>
                             <td>
-                                <img src="/public/flecha_up.png" alt="flecha arriba">
+                                    <img src="/public/flecha_down.png" alt="flecha arriba" id="toggleTableBtn" style="cursor:pointer;">
                             </td>
                         </tr>
+                    </table>
+                    <!-- Nueva tabla debajo de la primer fila -->
+                    <table class="table-noborder" id="tableTrimDetails" style="display:none;">
+                        <thead>
+                            <tr>
+                                <th>Description</th>
+                                <th>Color</th>
+                                <th>SKU</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>T-MOLD 94" X 1 3/4" X 5/16"</td>
+                                <td>FUME TM TOBACCO</td>
+                                <td>EVFTME623</td>
+                            </tr>
+                            <tr>
+                                <td>T-MOLD 94" X 1 3/4" X 5/16"</td>
+                                <td>FUME TM CANELA</td>
+                                <td>EVFTME3L5</td>
+                            </tr>
+                            <tr>
+                                <td>T-MOLD 94" X 1 3/4" X 5/16"</td>
+                                <td>FUME TM HONEY</td>
+                                <td>EVFTMEL04</td>
+                            </tr>
+                            <tr>
+                                <td>T-MOLD 94" X 1 3/4" X 5/16"</td>
+                                <td>FUME COTTON</td>
+                                <td>EVFTME1L4</td>
+                            </tr>
+                            <tr>
+                                <td>T-MOLD 94" X 1 3/4" X 5/16"</td>
+                                <td>FUME TM SILK</td>
+                                <td>EVFTMEL03</td>
+                            </tr>
+                            <tr>
+                                <td>T-MOLD 94" X 1 3/4" X 5/16"</td>
+                                <td>FUME TM MAPLE</td>
+                                <td>EVFTMEL07</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <!-- Fin nueva tabla -->
+                    <table class="table">
                         <tr>
                             <td>
                                 <img src="/public/trim2.png" alt="trim 2">
@@ -160,6 +205,7 @@
                     </table>
                 </div>
             </section>
+            <script src="toggleTrimTable.js"></script>
 
             <section class="contenedor-3columnas lotus">
                 <div>
