--- a/fume3.html
+++ b/fume3.html
@@ -125,84 +125,46 @@
                 <div>
                     <table class="table">
                         <tr style="border-bottom: 1px solid #9A9A9A;">
-                            <td>
+                            <td style="width: 41%;">
                                 <img src="/public/trim1.png" alt="trim 1">
                             </td>
                             <td>
                                 T-Mold  94" X 1 3/4" X 5/16"
                             </td>
                             <td>
-                                    <img src="/public/flecha_down.png" alt="flecha arriba" id="toggleTableBtn" style="cursor:pointer;">
+                                <img src="/public/flecha_down.png" alt="flecha arriba" id="toggleTableBtn1" style="cursor:pointer;">
                             </td>
                         </tr>
                     </table>
-                    <!-- Nueva tabla debajo de la primer fila -->
-                    <table class="table-noborder" id="tableTrimDetails" style="display:none;">
-                        <thead>
-                            <tr>
-                                <th>Description</th>
-                                <th>Color</th>
-                                <th>SKU</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>T-MOLD 94" X 1 3/4" X 5/16"</td>
-                                <td>FUME TM TOBACCO</td>
-                                <td>EVFTME623</td>
-                            </tr>
-                            <tr>
-                                <td>T-MOLD 94" X 1 3/4" X 5/16"</td>
-                                <td>FUME TM CANELA</td>
-                                <td>EVFTME3L5</td>
-                            </tr>
-                            <tr>
-                                <td>T-MOLD 94" X 1 3/4" X 5/16"</td>
-                                <td>FUME TM HONEY</td>
-                                <td>EVFTMEL04</td>
-                            </tr>
-                            <tr>
-                                <td>T-MOLD 94" X 1 3/4" X 5/16"</td>
-                                <td>FUME COTTON</td>
-                                <td>EVFTME1L4</td>
-                            </tr>
-                            <tr>
-                                <td>T-MOLD 94" X 1 3/4" X 5/16"</td>
-                                <td>FUME TM SILK</td>
-                                <td>EVFTMEL03</td>
-                            </tr>
-                            <tr>
-                                <td>T-MOLD 94" X 1 3/4" X 5/16"</td>
-                                <td>FUME TM MAPLE</td>
-                                <td>EVFTMEL07</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <!-- Fin nueva tabla -->
+                    <div id="tableTrimDetailsContainer1"></div>
                     <table class="table">
-                        <tr>
-                            <td>
+                        <tr style="border-bottom: 1px solid #9A9A9A;">
+                            <td style="width: 41%;">
                                 <img src="/public/trim2.png" alt="trim 2">
                             </td>
-                            <td>
-                                Reducer 94 X 1 3/4
+                            <td style="width: 54%;">
+                                Reducer 94 X 1 3/4           
                             </td>
                             <td>
-                                <img src="/public/flecha_down.png" alt="flecha abajo">
+                                <img src="/public/flecha_down.png" alt="flecha arriba" id="toggleTableBtn2" style="cursor:pointer;">
                             </td>
                         </tr>
-                        <tr>
-                            <td>
+                    </table>
+                    <div id="tableTrimDetailsContainer2"></div>
+                    <table class="table">
+                        <tr style="border-bottom: 1px solid #9A9A9A;">
+                            <td style="width: 41%;">
                                 <img src="/public/trim3.png" alt="trim 3">
                             </td>
                             <td>
                                 Round Stair Noses  94 X 1 3/4
                             </td>
                             <td>
-                                <img src="/public/flecha_down.png" alt="flecha abajo">
+                                <img src="/public/flecha_down.png" alt="flecha arriba" id="toggleTableBtn3" style="cursor:pointer;">
                             </td>
                         </tr>
                     </table>
+                    <div id="tableTrimDetailsContainer3"></div>
                 </div>
             </section>
             <script src="toggleTrimTable.js"></script>
