--- a/apres.html
+++ b/apres.html
@@ -99,46 +99,54 @@
                 </div>
             </div>
 
-            <section class="contendor-trim contenedor" style="margin: 8rem;">
+            <section class="contendor-trim" style="margin: 8rem;">
                 <h1>Trim</h1>
                 <div>
                     <table class="table">
-                        <tr>
-                            <td>
+                        <tr style="border-bottom: 1px solid #9A9A9A;">
+                            <td style="width: 41%;">
                                 <img src="/public/trim1.png" alt="trim 1">
                             </td>
                             <td>
                                 T-Mold  94" X 1 3/4" X 5/16"
                             </td>
                             <td>
-                                <img src="/public/flecha_up.png" alt="flecha arriba">
+                                <img src="/public/flecha_down.png" alt="flecha arriba" id="toggleTableBtn1" style="cursor:pointer;">
                             </td>
                         </tr>
-                        <tr>
-                            <td>
+                    </table>
+                    <div id="tableTrimDetailsContainer1"></div>
+                    <table class="table">
+                        <tr style="border-bottom: 1px solid #9A9A9A;">
+                            <td style="width: 41%;">
                                 <img src="/public/trim2.png" alt="trim 2">
                             </td>
-                            <td>
-                                Reducer 94 X 1 3/4
+                            <td style="width: 54%;">
+                                Reducer 94 X 1 3/4           
                             </td>
                             <td>
-                                <img src="/public/flecha_down.png" alt="flecha abajo">
+                                <img src="/public/flecha_down.png" alt="flecha arriba" id="toggleTableBtn2" style="cursor:pointer;">
                             </td>
                         </tr>
-                        <tr>
-                            <td>
+                    </table>
+                    <div id="tableTrimDetailsContainer2"></div>
+                    <table class="table">
+                        <tr style="border-bottom: 1px solid #9A9A9A;">
+                            <td style="width: 41%;">
                                 <img src="/public/trim3.png" alt="trim 3">
                             </td>
                             <td>
                                 Round Stair Noses  94 X 1 3/4
                             </td>
                             <td>
-                                <img src="/public/flecha_down.png" alt="flecha abajo">
+                                <img src="/public/flecha_down.png" alt="flecha arriba" id="toggleTableBtn3" style="cursor:pointer;">
                             </td>
                         </tr>
                     </table>
+                    <div id="tableTrimDetailsContainer3"></div>
                 </div>
             </section>
+            <script src="toggleTrimTable.js"></script>
 
             <section class="contenedor-3columnas lotus">
                 <div>
